Update trino.md